[tool.poetry]
name = "ultimate-chrome"
version = "2.0.0"
description = ""
authors = ["Parker Wahle <regulad@regulad.xyz>"]

[tool.poetry.dependencies]
python = "^3.10,<3.11"
selenium = "^4.1.0"
replit = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
